<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_top_corners"
    android:padding="@dimen/margin_border_a_little">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/task_name_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:hint="@string/name"
        app:boxStrokeWidth="0dp"
        app:hintAnimationEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/task_name"
            style="@style/Text.Grey.Middle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners_clickable"
            android:padding="@dimen/margin_border_a_little" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/task_description_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:hint="@string/description"
        app:boxStrokeWidth="0dp"
        app:hintAnimationEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/task_name_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/task_description"
            style="@style/Text.Grey.Mini"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners_clickable"
            android:padding="@dimen/margin_border_a_little"
            android:layout_marginVertical="@dimen/margin_border"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/done_button"
        style="@style/Text.Grey.Mini"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/task_description_layout" />

    <TextView
        android:id="@+id/cancel_button"
        style="@style/Text.Grey.Mini"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/task_description_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>